# OneHornModManager

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  colours.css  colours.scss  index.html  styles.css  styles.scss
backend/: Cargo.toml  tauri.conf.json
backend/icons/: icon.icns
backend/src/: extensions.rs  file_browser.rs  logger.rs  main.rs  mod_details.rs  mod_settings_builder.rs
backend/src/mod_package/: file.rs  meta.rs  mod.rs
backend/src/state/: commands.rs  helpers.rs  mod.rs  mod_models.rs  profiles.rs
gimp-files/: Logo.xcf
models/: Cargo.toml
models/src/: errors.rs  fs.rs  lib.rs  logging.rs
package-helper/: Cargo.toml
package-helper/src/: error.rs  file_info.rs  lib.rs  meta.rs  package.rs
package-helper/src/models/: mod.rs
package-helper/src/package_reader/: mod.rs  package_header.rs
public/translations/: en-GB.json  languages.json
src/: app.rs  app.scss  bindings.rs  listeners.rs  logger.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: helper.rs  main.rs  models.rs  translation.rs
src-tauri/src/file_browser/: commands.rs  mod.rs
src-tauri/src/state/: commands.rs  mod.rs  mod_settings_builder.rs  profile.rs
src/bindings/: file_browser.rs  logging.rs  manager.rs  mod.rs
src/bottom_bar/: bottom-bar.scss  mod.rs
src/components/: bottom_bar.rs  button.rs  components.css  components.scss  console.rs  element.rs  element.scss  error_message.rs  main_page.rs  mod.rs  mod_list.rs  profiles.rs  select.rs  spinner.rs  svg.rs  tooltip.rs  top_bar.rs
src/components/css/: app.css  app.scss  bottom-bar.css  bottom-bar.scss  console.scss  element.css  element.scss  main-page.scss  mod-list.css  mod-list.scss  select.scss  spinner.scss  top-bar.css  top-bar.scss
src/components/file_explorer/: add_new_mod.rs  current_file.rs  file-explorer.css  file-explorer.scss  file_nav.rs  files.rs  location.rs  mod.rs
src/console/: console.scss  mod.rs
src/helpers/: localisation.rs  mod.rs
src/menus/: menus.css  mod.rs  side_bar.rs
src/models/: mod.rs
src/pages/: file_browser.css  file_browser.rs  mod.rs  mod_list.css  mod_list.rs  pages.scss  profiles.css  profiles.rs  settings.rs
src/pages/file_explorer/: add_new_mod.rs  current_file.rs  file-explorer.scss  file_nav.rs  files.rs  mod.rs
src/pages/main_page/: apply-mods-panel.scss  apply_mods_panel.rs  main-page.scss  mod-list.scss  mod.rs  mod_list.rs  selected-mod-panel.scss  selected-mod.scss  selected_mod_panel.rs
src/top_bar/: mod.rs  profiles.rs  top-bar.scss
