[package]
name = "baldurs_gate_3_mod_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumflags2 = "0.7.8"
lz4_flex = "0.11.1"
regex = "1.9.5"
roxmltree = "0.18.0"
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize", "std"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["EventTarget", "Event"]}
js-sys = "0.3"

models = { path = "models" }
log = "0.4.20"

[workspace]
members = ["backend"]