[package]
name = "one-horn-rewrite-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlTemplateElement", "Node", "InputEvent"] }
js-sys = "0.3"
uuid = { version = "1.6.1", features = ["serde", "v4", "js"] }
log = { version = "0.4.20", features = ["std"] }

tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }

[workspace]
members = ["src-tauri", "package-helper"]
