[package]
name = "one-horn-mod-manager-backend"
version = "0.0.0"
description = "One Horn Mod Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
lz4_flex = "0.11.1"
regex = "1.9.5"
roxmltree = "0.18.0"
spin = "0.9.8"
byteorder = "1.4.3"
xml-builder = "0.5.2"
chrono = "0.4.31"
symlink = "0.1.0"
dirs = "5.0.1"
steamlocate = "1.2.1"
flate2 = "1.0.28"
zip-extract = "0.1.2"
once_cell = "1.18.0"

models = { path = "../models" }
package-helper = { path = "../package-helper" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
